[gd_scene load_steps=5 format=3 uid="uid://bprq75q63kw0v"]

[ext_resource type="Script" path="res://scripts/menu_screen.gd" id="1_g3053"]
[ext_resource type="Texture2D" uid="uid://c06ibogskgu8v" path="res://images/Blue.png" id="2_u87c5"]
[ext_resource type="AudioStream" uid="uid://dnu33icy1l6kt" path="res://sound/Happy Mistake - RKVC.mp3" id="3_e65wx"]
[ext_resource type="FontFile" uid="uid://beaeaw67k2s71" path="res://fonts/sofachrome rg it.otf" id="4_y5ywt"]

[node name="menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g3053")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u87c5")
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e65wx")
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.9493e-06, 0.352194, 0.431032, 1)
theme_override_colors/font_shadow_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 60
text = "typer miner"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933326, 4.81308e-06, 9.62615e-07, 1)
theme_override_colors/font_shadow_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_font_sizes/font_size = 50
text = "by Alex Nefedov"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 0

[node name="start_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.176471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "STARt game"

[node name="test_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.176471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "TEST"

[node name="options_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176909, 0.17628, 0.376298, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "OPTIONS"

[node name="help_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.176471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "HELP"

[node name="credits_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.176471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "CREDIts"

[node name="quit_menubutton" type="MenuButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.176471, 0.176471, 0.376471, 1)
theme_override_colors/font_pressed_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_disabled_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.517647, 0, 1)
theme_override_fonts/font = ExtResource("4_y5ywt")
theme_override_font_sizes/font_size = 25
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/test_menubutton" to="." method="_on_test_menubutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/help_menubutton" to="." method="_on_help_menubutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits_menubutton" to="." method="_on_credits_menubutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_menubutton" to="." method="_on_quit_menubutton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_menubutton" to="." method="_on_credits_menubutton_pressed"]
